# llm-todo

./: .gitignore  CMakeLists.txt  README.md
plans/: PROGRESS.md  implementation-plan.md  requirement.md
src/: cli.cpp  main.cpp  store.cpp  task.cpp
src/commands/: add.cpp  command.cpp  done.cpp  list.cpp  rm.cpp
